--- a/packages/pyxis-scss/src/scss/components/modal.scss
+++ b/packages/pyxis-scss/src/scss/components/modal.scss
@@ -24,6 +24,13 @@ $_sizesOnBp: (
 
 .modal-close {
   @include foundations.absolute;
+
+  @include foundations.mq(xsmall) {
+    height: 100vh;
+    margin-bottom: -100vh;
+    position: sticky;
+    width: 100vw;
+  }
 }
 
 .modal {
